Validate echo length; use virtual thread for ICE listener
Two small unrelated cleanups around the ICE peer listener:

1. PeerConnectivityCheckerModule.echoReceived() previously incremented
   invalidEchosReceived on length != 9, then fell through to compute RTT
   via Longs.fromByteArray(Arrays.copyOfRange(data, offset+1, length)).
   When length is below 9 that throws IllegalArgumentException; when
   length is above 9 the first 8 bytes are reinterpreted as a timestamp
   and the bogus RTT poisons the EMA at line 102. Add an early return.

2. PeerIceModule started its data listener as a platform thread, missed
   by PR #65's virtual-thread migration (the connectivity checker,
   sending loop, and acceptors are all virtual). Each peer held a carrier
   thread on a blocking socket.receive() with no benefit. Convert to a
   virtual thread with a descriptive name.

Both changes are zero-risk and self-contained.